# vera

./: .env.example  .gitignore  .pyre_configuration  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  scheduler.py
core/: api.py  bus.py  config_manager.py  deps.py  docs.py  extensions.py  kernel.py  middleware_config.py  observability.py  secrets.py  security.py  setup.py
core/auth/: __init__.py  base.py  local.py  manager.py  session.py
core/auth/docs/: overview.md
core/docs/: api.md  bus.md  config_manager.md  deps.md  extensions.md  kernel.md  observability.md  secrets.md  security.md  setup.md  vfs.md
core/middleware/: auditor.py  auth.py  base.py  cost_recorder.py  pii_masker.py  retry.py  secret_injector.py
core/middleware/docs/: layers.md  overview.md
core/vfs/: __init__.py  base.py  local_fs.py  redis_fs.py
core/vfs/docs/: overview.md
data/: middleware.json
data/casbin/: policy.csv
docs/: CONTRACTS.md  FutureMiddlewares.md  index.md  quickstart.md
interfaces/api/: __init__.py  main.py
interfaces/cli/: _session.py  main.py
plugins/_template/: manifest.yaml  plugin.py
plugins/agent/: manifest.yaml  plugin.py  schemas.py  tools.py
plugins/llm_driver/: schemas.py
plugins/memory_rag/: schemas.py
tests/integration/: test_middleware_chain.py
tests/plugin_sdk/: conftest.py  test_contract.py
tests/unit/: test_bus.py  test_contracts.py  test_kernel.py  test_middleware_audit.py  test_middleware_auth.py  test_middleware_pii.py  test_middleware_retry.py  test_secrets.py  test_security.py  test_vfs.py
(+18 files in other folders)
